# Open_Dunes

./: .gitignore  CMakeLists.txt  readme.md
images/: UI_Mockup.clip
include/glad/: glad.h
src/: CMakeLists.txt  Color.cpp  Color.h  Particle.cpp  Particle.h  glad.c  main.cpp
